# build-llm

./: .gitignore  README.md  pyproject.toml
chapter_2/: notebook.ipynb
dataset/: gpt_dataset_v1.py
scripts/: download_data.py  format
tokenizer/: simple_tokenizer_v1.py  simple_tokenizer_v2.py
