[project]
name = "build-llm"
version = "0.1.0"
description = "Working through the Build a Large Language Model (From Scratch) book"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.1.0",
    "nbqa>=1.9.1",
    "notebook>=7.4.4",
    "numpy==2.3.1",
    "tiktoken>=0.9.0",
    "torch>=2.7.1",
]
